Add catalogue page

--- a/template/catalogue.html
+++ b/template/catalogue.html
@@ -31,59 +31,82 @@
                 </div>
             </nav>
         </div>
-        <div class="first-element-after-nav-margin-top">
-            <div class="business-profile">
-                <div class="business-profile-tint container-fluid">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="business-logo-wrapper div-thumbnail-round my-4 mx-auto">
-                                <img class="img-fluid" src="static-files/img/content/businesses/logo/pepsi.png" alt="Business Logo">
+        <div class="all-businesses-div container first-element-after-nav-margin-top">
+            <div class="all-businesses">
+                <div class="business mb-3 p-4">
+                    <a class="business-item" href="#">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5>ES-Glamore International</h5>
                             </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="business-info">
-                                <div class="business-name">
-                                    <div class="text-center">
-                                        <h1 class="pr-3">ES-Glamore International</h1>
-                                        <p class="mantra">Glamour speaks</p>
+                            <div class="col-md-2">
+                                <p>Fashion</p>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="rating-info text-right">
+                                    <div class="business-rating-img mr-2">
+                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                     </div>
-                                    <span class="rating-img"><img class="img-fluid" src="static-files/img/content/rating.png" alt=""></span>
-                                </div>
-                                <div class="business-details-div my-2">
-                                    <div class="business-detail">
-                                        <i class="fa fa-road"></i>
-                                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor magna.</span>
-                                    </div>
-                                    <div class="business-detail">
-                                        <i class="fa fa-phone"></i>
-                                        <span>01 - 784 2346</span>
-                                    </div>
-                                    <div class="business-detail">
-                                        <i class="fa fa-envelope"></i>
-                                        <span>info@esglamourinternational</span>
-                                    </div>
-                                    <div class="business-detail">
-                                        <i class="fa fa-globe"></i>
-                                        <span>www.esglamourinternational</span>
-                                    </div>
-                                </div>
-                                <div class="review-rating-div text-center mb-3">
-                                    <a href="#">
-                                        <div class="review-div mr-5">
-                                            <span>29</span>
-                                            <span class="review">Reviews</span>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="rating-div">
-                                            <span>4.2</span>
-                                            <span>Rating</span>
-                                        </div>
-                                    </a>
+                                    <span>4.2</span>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>Lagos, Nigeria</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="business mb-3 p-4">
+                    <a class="business-item" href="#">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5>Octacorp</h5>
+                            </div>
+                            <div class="col-md-2">
+                                <p>Technology</p>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="rating-info text-right">
+                                    <div class="business-rating-img mr-2">
+                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
+                                    </div>
+                                    <span>4.2</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>Benue, Nigeria</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="business mb-3 p-4">
+                    <a class="business-item" href="#">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5>ES-Hotels & Suites</h5>
+                            </div>
+                            <div class="col-md-2">
+                                <p>Hospitality</p>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="rating-info text-right">
+                                    <div class="business-rating-img mr-2">
+                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
+                                    </div>
+                                    <span>4.2</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <span>Edo, Nigeria</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="container-fluid">
