--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,7 @@
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
+        <link rel="stylesheet" href="static-files/css/submaster.css">
         <link rel="stylesheet" href="static-files/css/index.css">
     </head>
     <body>
@@ -54,7 +55,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="rating-info text-right">
-                                            <div class="rating-img mr-2">
+                                            <div class="business-rating-img mr-2">
                                                 <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                             </div>
                                             <span>4.2</span>
@@ -69,7 +70,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="rating-info text-right">
-                                            <div class="rating-img mr-2">
+                                            <div class="business-rating-img mr-2">
                                                 <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                             </div>
                                             <span>4.2</span>
@@ -89,8 +90,8 @@
             <div class="trending-container py-3">
                 <h1 class="text-center">Trending</h1>
                 <div class="trending-div pt-2">
-                    <div class="trending mb-3 p-4">
-                        <a class="trending-item" href="#">
+                    <div class="business mb-3 p-4">
+                        <a class="business-item" href="#">
                             <div class="row">
                                 <div class="col-md-6">
                                     <h5>ES-Glamore International</h5>
@@ -100,7 +101,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="rating-info text-right">
-                                        <div class="rating-img mr-2">
+                                        <div class="business-rating-img mr-2">
                                             <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                         </div>
                                         <span>4.2</span>
@@ -114,8 +115,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="trending mb-3 p-4">
-                        <a class="trending-item" href="#">
+                    <div class="business mb-3 p-4">
+                        <a class="business-item" href="#">
                             <div class="row">
                                 <div class="col-md-6">
                                     <h5>Octacorp</h5>
@@ -125,7 +126,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="rating-info text-right">
-                                        <div class="rating-img mr-2">
+                                        <div class="business-rating-img mr-2">
                                             <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                         </div>
                                         <span>4.2</span>
@@ -139,8 +140,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="trending mb-3 p-4">
-                        <a class="trending-item" href="#">
+                    <div class="business mb-3 p-4">
+                        <a class="business-item" href="#">
                             <div class="row">
                                 <div class="col-md-6">
                                     <h5>ES-Hotels & Suites</h5>
@@ -150,7 +151,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="rating-info text-right">
-                                        <div class="rating-img mr-2">
+                                        <div class="business-rating-img mr-2">
                                             <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
                                         </div>
                                         <span>4.2</span>
