Add catalogue CSS

--- a/template/catalogue.html
+++ b/template/catalogue.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
         <link rel="stylesheet" href="static-files/css/submaster.css">
-        <link rel="stylesheet" href="static-files/css/business-profile-page.css">
+        <link rel="stylesheet" href="static-files/css/catalogue.css">
     </head>
     <body>
         <div class="nav-div fixed-top" id="navigation-div">
@@ -31,101 +31,92 @@
                 </div>
             </nav>
         </div>
-        <div class="all-businesses-div container first-element-after-nav-margin-top">
-            <div class="all-businesses">
-                <div class="business mb-3 p-4">
-                    <a class="business-item" href="#">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>ES-Glamore International</h5>
-                            </div>
-                            <div class="col-md-2">
-                                <p>Fashion</p>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="rating-info text-right">
-                                    <div class="business-rating-img mr-2">
-                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
-                                    </div>
-                                    <span>4.2</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <span>Lagos, Nigeria</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="business mb-3 p-4">
-                    <a class="business-item" href="#">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>Octacorp</h5>
-                            </div>
-                            <div class="col-md-2">
-                                <p>Technology</p>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="rating-info text-right">
-                                    <div class="business-rating-img mr-2">
-                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
-                                    </div>
-                                    <span>4.2</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <span>Benue, Nigeria</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="business mb-3 p-4">
-                    <a class="business-item" href="#">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>ES-Hotels & Suites</h5>
-                            </div>
-                            <div class="col-md-2">
-                                <p>Hospitality</p>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="rating-info text-right">
-                                    <div class="business-rating-img mr-2">
-                                        <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
-                                    </div>
-                                    <span>4.2</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <span>Edo, Nigeria</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+        <div class="all-businesses container first-element-after-nav-margin-top">
+            <div class="search-info">
+                <p class="pt-3">Showing results for: "<search query>"</p>
             </div>
-            <div class="container-fluid">
-                <div class="sectional-div my-4">
-                    <div class="sectional-heading">
-                        <h4>About</h4>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="#">Read more...</a>
-                </div>
-                <div class="sectional-div mb-4">
-                    <div class="sectional-heading">
-                        <h4>Recent Activities</h4>
-                        <div class="recent-activities">
-                            <a href="#"><span>David Moyes</span> left a review</a>
+            <div class="business mb-3 p-4">
+                <a class="business-item" href="#">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>ES-Glamore International</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <p>Fashion</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="rating-info text-right">
+                                <div class="business-rating-img mr-2">
+                                    <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
+                                </div>
+                                <span>4.2</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <span>Lagos, Nigeria</span>
+                        </div>
+                    </div>
+                </a>
             </div>
+            <div class="business mb-3 p-4">
+                <a class="business-item" href="#">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>Octacorp</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <p>Technology</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="rating-info text-right">
+                                <div class="business-rating-img mr-2">
+                                    <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
+                                </div>
+                                <span>4.2</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <span>Benue, Nigeria</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="business mb-3 p-4">
+                <a class="business-item" href="#">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>ES-Hotels & Suites</h5>
+                        </div>
+                        <div class="col-md-2">
+                            <p>Hospitality</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="rating-info text-right">
+                                <div class="business-rating-img mr-2">
+                                    <img class="img-fluid pb-2" src="static-files/img/content/rating.png" alt="">
+                                </div>
+                                <span>4.2</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <span>Edo, Nigeria</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="page-nav text-center mb-3">
+            <i class="fa fa-sort-asc mr-2"></i>
+            <a href="#"><span>1</span></a>
+            <a href="#"><span>2</span></a>
+            <a href="#"><span>3</span></a>
+            <i class="fa fa-sort-desc"></i>
         </div>
         <footer>
             <div class="container py-4">
