--- a/template/static-files/css/submaster.css
+++ b/template/static-files/css/submaster.css
@@ -16,6 +16,7 @@ body {
     margin: .5rem 1rem;
 }
 .business {
+    background-color: white;
     box-shadow: 0px 0px 4px 0px grey;
     border-radius: 5px;
     transition: all .5s ease-in-out;
