--- a/template/BusinessProfilePage.html
+++ b/template/BusinessProfilePage.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="index.html">Home</a>
-                        <a class="nav-item nav-link" href="#">Businesses</a>
+                        <a class="nav-item nav-link" href="catalogue.html">Businesses</a>
                         <a class="nav-item nav-link" href="UserProfile.html">Login</a>
                         <a class="nav-item nav-link" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
                     </div>
