--- a/template/UserProfile.html
+++ b/template/UserProfile.html
@@ -27,7 +27,7 @@
                     </form>
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="index.html">Home</a>
-                        <a class="nav-item nav-link" href="#">Businesses</a>
+                        <a class="nav-item nav-link" href="catalogue.html">Businesses</a>
                     </div>
                 </div>
             </nav>
