--- a/template/catalogue.html
+++ b/template/catalogue.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="index.html">Home</a>
-                        <a class="nav-item nav-link" href="#">Businesses</a>
+                        <a class="nav-item nav-link" href="catalogue.html">Businesses</a>
                         <a class="nav-item nav-link" href="UserProfile.html">Login</a>
                         <a class="nav-item nav-link" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
                     </div>
@@ -36,7 +36,7 @@
                 <p class="pt-3">Showing results for: "<search query>"</p>
             </div>
             <div class="business mb-3 p-4">
-                <a class="business-item" href="#">
+                <a class="business-item" href="BusinessProfilePage.html">
                     <div class="row">
                         <div class="col-md-6">
                             <h5>ES-Glamore International</h5>
