--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav ml-auto">
                             <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="#">Businesses</a>
+                            <a class="nav-item nav-link" href="catalogue.html">Businesses</a>
                             <a class="nav-item nav-link" href="login.html">Login</a>
                             <a class="nav-item nav-link" href="signup.html">Sign Up</a>
                         </div>
@@ -91,7 +91,7 @@
                 <h1 class="text-center">Trending</h1>
                 <div class="trending-div pt-2">
                     <div class="business mb-3 p-4">
-                        <a class="business-item" href="#">
+                        <a class="business-item" href="BusinessProfilePage.html">
                             <div class="row">
                                 <div class="col-md-6">
                                     <h5>ES-Glamore International</h5>
