--- a/template/CreateBusinessPage.html
+++ b/template/CreateBusinessPage.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
         <link rel="stylesheet" href="static-files/css/submaster.css">
-        <link rel="stylesheet" href="static-files/css/user-profile.css">
+        <link rel="stylesheet" href="static-files/css/create-business.css">
     </head>
     <body>
         <div class="nav-div fixed-top">
@@ -53,39 +53,55 @@
             </div>
         </div>
         <div class="container element-after-nav-margin-top">
-            <form class="my-5" method="POST">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="firstname">First Name</label>
-                        <input type="text" class="form-control" id="firstname" placeholder="e.g John">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" class="form-control" id="lastname" placeholder="e.g Doe">
-                    </div>
+            <form class="form-style my-5" method="POST">
+                <div class="form-group">
+                    <label for="businessName">Business Name</label>
+                    <input type="text" class="form-control" id="businessName" placeholder="Write in full">
+                </div>
+                <div class="form-group">
+                    <label for="mantra">Mantra</label>
+                    <input type="text" class="form-control" id="mantra" placeholder="What is your mantra">
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         <label for="email">Email Address</label>
                         <input type="email" class="form-control" id="email" placeholder="e.g something@example.com">
                     </div>
-                    <div class="form-group col-md-6">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" placeholder="e.g johndoe123">
+                    <div class="form-group col-md-4">
+                        <label for="webAddress">Web Address</label>
+                        <input type="text" class="form-control" id="webAddress" placeholder="e.g www.example.com">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="phone">Phone number</label>
+                        <input type="" class="form-control" id="phone" placeholder="e.g 08062347845">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="At least 6 characters" min="6">
+                        <label for="address1">Address line 1</label>
+                        <input type="text" class="form-control" id="address1" placeholder="e.g 5, Thompson Street">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="repassword">Retype password</label>
-                        <input type="password" class="form-control" id="repassword" placeholder="Please enter password again">
+                        <label for="address2">Address line 2</label>
+                        <input type="text" class="form-control" id="address2" placeholder="e.g Beside Ogunsanya Bus Stop">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="city">City</label>
+                        <input type="text" class="form-control" id="city" placeholder="e.g Maryland">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="state">State</label>
+                        <input type="text" class="form-control" id="state" placeholder="e.g Benue">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="country">Country</label>
+                        <input type="text" class="form-control" id="country" placeholder="e.g Nigeria">
                     </div>
                 </div>
                 <div class="mt-3 px-0 text-center">
-                    <button class="btn btn-outline-success" type="submit">Sign Up</button>
+                    <button class="btn btn-outline-success" type="submit">Register business</button>
                 </div>
             </form>
         </div>
