--- a/template/static-files/css/user.css
+++ b/template/static-files/css/user.css
@@ -17,6 +17,7 @@ body {
     border-radius: 1000px;
 }
 .my-businesses {
+    position: relative;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0.5px 1px 4px 0 rgba(0,0,0,.5);
