--- a/template/UserProfile.html
+++ b/template/UserProfile.html
@@ -9,7 +9,8 @@
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
-        <link rel="stylesheet" href="static-files/css/user-profile.css">
+        <link rel="stylesheet" href="static-files/css/submaster.css">
+        <link rel="stylesheet" href="static-files/css/user.css">
     </head>
     <body>
         <div class="nav-div fixed-top">
@@ -87,6 +88,11 @@
                     <div class="col-md-6">
                         <div class="my-businesses">
                             <h3 class="text-center p-3">My Businesses</h3>
+                            <div class="action-button-div">
+                                <a href="CreateBusinessPage.html">
+                                    <button class="action-button" type="button" name="new" id="new">New</button>
+                                </a>
+                            </div>
                             <table class="table table-responsive-md text-center">
                                 <thead>
                                     <tr>
